language design fixed

--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -18,18 +18,29 @@ journal = {ACM Computing Surveys},
 doi = {10.1145/3354584}
 }
 @online{stroustrup_com,
+    title="Bjarne Stroustrup Website",
     author = "Bjarne Stroustrup",
     url= "stroustrup.com/bs_faq.html",
     urldate = {2020-10-28},
 }
 
+@online{cpp:core_guidelines,
+    title="C++ Core Guidelines",
+    author = "ISOCPP",
+    url= "isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines",
+    urldate = {2020-10-28},
+}
+
 @online{roslyn,
+    title="Roslyn",
     author = "Dotnet",
     url = "github.com/dotnet/roslyn",
     urldate = {2021-11-12}
 }
 
 @online{rust,
+    author="Rust team",
+    title="Rust",
     url="www.rust-lang.org/",
     urldate = {2021-11-12}
 }
