--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -7,6 +7,15 @@
   year={2004},
   publisher={Springer Berlin Heidelberg}
 }
+
+@book{puntambekar:compiler_design,
+  title={COMPILER DESIGN},
+  author={A Puntambekar},
+  isbn={9350380870},
+  year={2011},
+  publisher={Technical Publications}
+}
+
 @article{survey_of_metaprograming,
 author = {Lilis, Yannis and Savidis, Anthony},
 year = {2019},
@@ -87,6 +96,16 @@ title = {{Programming languages — C++}},
 volume = {2020},
 address = {Geneva, CH},
 institution = {International Organization for Standardization}
+}
+
+@techreport{ecma:cli,
+type = {Standard},
+key = {ECMA-335},
+month = jun,
+year = {2012},
+title = {Common Language Infrastructure (CLI)},
+volume = {2020},
+institution = {ECMA (European Association for Standardizing Information and Communication Systems), pub-ECMA: adr,},
 }
 
 % Fragment książki (np. zakres stron).
@@ -201,4 +220,35 @@ software Master todays most effective idioms and techniques Reuse source code wi
 compromising performance or safety Benefit from utilities for generic programming
 in the C++ Standard Library Preview the upcoming concepts feature The companion website,
 tmplbook.com, contains sample code and additional updates.}
+}
+
+@book{intro_to_compiler_design,
+author = {Mogensen, Torben \AE{}gidius},
+title = {Introduction to Compiler Design},
+year = {2011},
+isbn = {0857298283},
+publisher = {Springer Publishing Company, Incorporated},
+edition = {1st},
+abstract = {This textbook is intended for an introductory course on Compiler Design, suitable
+for use in an undergraduate programme in computer science or related fields.Introduction
+to Compiler Design presents techniques for making realistic, though non-optimizing
+compilers for simple programming languages using methods that are close to those used
+in "real" compilers, albeit slightly simplified in places for presentation purposes.
+All phases required for translating a high-level language to machine language is covered,
+including lexing, parsing, intermediate-code generation, machine-code generation and
+register allocation. Interpretation is covered briefly.Aiming to be neutral with respect
+to implementation languages, algorithms are presented in pseudo-code rather than in
+any specific programming language, and suggestions for implementation in several different
+language flavors are in many cases given. The techniques are illustrated with examples
+and exercises.The author has taught Compiler Design at the University of Copenhagen
+for over a decade, and the book is based on material used in the undergraduate Compiler
+Design course there.Additional material for use with this book, including solutions
+toselected exercises, is available at http://www.diku.dk/~torbenm/ICD}
+}
+
+@bathesis {grabski2020,
+    author = "Grabski, Adam",
+    title  = "Rose Parser Generator",
+    school  = "Wydział Elektroniki i Technik Informacyjnych, Politechnika Warszawska",
+    year   = "2020",
 }
