--- a/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
+++ b/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
@@ -67,4 +67,4 @@ Użytkownik może dokonywać modyfikacji w CIR, co oznacza że może dojść do 
 
 
 Ponieważ w nowym podejściu, z perspektywy C++ niemalże wszystkie obiekty miały ten sam typ, kompilator stracił możliwość statycznej weryfikacji kodu.
-Aby zapewnić poprawność programu, koniecznym stało się dodawanie walidacji argumentów do wszystkich funkcji.
+Aby zapewnić poprawność programu, koniecznym stało się dodawanie analizy argumentów do wszystkich funkcji.
