language comparison fixed. Added monospace font for listings

--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -8,6 +8,16 @@
   publisher={Springer Berlin Heidelberg}
 }
 
+@book{gang_of_four:design_patterns,
+author = {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
+title = {Design Patterns: Elements of Reusable Object-Oriented Software},
+year = {1995},
+isbn = {0201633612},
+publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+address = {USA}
+}
+
+
 @book{puntambekar:compiler_design,
   title={COMPILER DESIGN},
   author={A Puntambekar},
@@ -94,6 +104,17 @@ month = mar,
 year = {2020},
 title = {{Programming languages — C++}},
 volume = {2020},
+address = {Geneva, CH},
+institution = {International Organization for Standardization}
+}
+
+@techreport{ISO:cpp17,
+type = {Standard},
+key = {ISO/IEC 14882:2017 },
+month = mar,
+year = {2017},
+title = {{Programming languages — C++}},
+volume = {2017},
 address = {Geneva, CH},
 institution = {International Organization for Standardization}
 }
