--- a/Papers/WUT-Master-Thesis/main.tex
+++ b/Papers/WUT-Master-Thesis/main.tex
@@ -18,6 +18,11 @@
 \graphicspath{{img/}}             % Katalog z obrazkami.
 \addbibresource{bibliografia.bib} % Plik .bib z bibliografią
 \usepackage{listings}
+\lstdefinestyle{mystyle}{
+    basicstyle=\ttfamily\footnotesize,
+}
+
+\lstset{style=mystyle}
 
 \begin{document}
 
